# mad-ba

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  README3.md  READMEold.md  build_and_run.sh  build_image.sh  calculate_lidarba_nc.sh  calculate_lidarba_vbr.sh  package.xml  run_container.sh  running_now.md
apps/: CMakeLists.txt  app_point_cloud_proc.cpp  convert_gt_map.cpp  main_app.cpp
modules/mad_ba/: CMakeLists.txt  dl.conf  package.xml
modules/mad_ba/apps/: main_app.cpp
modules/mad_ba/config/: app_point_cloud_proc.config  diag.config  dl.conf  maths_institute.config  underground_mine_easy.config
modules/mad_ba/config/KITTI/: kitti_00_odom.config  kitti_01_odom.config  kitti_02_odom.config  kitti_03_odom.config  kitti_04_odom.config  kitti_05_odom.config  kitti_06_odom.config  kitti_07_odom.config  kitti_08_odom.config  kitti_09_odom.config  kitti_10_odom.config
modules/mad_ba/config/NewerCollege/: cloister.config  maths_institute.config  quad_easy.config  quad_easy_fast.config  stairs.config  underground_mine_easy.config
modules/mad_ba/config/VBR/: campus.config  ciampino.config  colosseo.config  diag.config  pincio.config  spagna.config
modules/mad_ba/src/: CMakeLists.txt
modules/mad_ba/src/mad_ba/: data_association.cpp  instances.cpp  instances.h  kdtree.cuh  point_cloud_proc.cpp  surfel.cpp  surfel.h  utils.h
modules/mad_ba/src/types/: instances.cpp  variable_se3.cpp  variable_se3.h  variable_se3_ad.h
modules/srrg/srrg2_core/srrg2_core/src/srrg_config/: CMakeLists.txt  configurable_shell.cpp  configurable_shell.h  pipeline_runner.cpp  pipeline_runner.h  preemptible.cpp  preemptible.h  preemptible_example.cpp
modules/srrg/srrg2_core/srrg2_core/src/srrg_data_structures/: CMakeLists.txt  abstract_map.h  abstract_map_view.h  file_handle.cpp  file_handle.h  file_vector_interface.h  file_vector_interface_test.cpp  grid_map_2d.cpp  grid_map_2d.h  matrix.h  matrix.hpp  memory_mapped_file.cpp  memory_vector_interface.h  path_matrix.cpp  path_matrix.h  path_matrix_astar_search.cpp  path_matrix_astar_search.h  path_matrix_clusterer_search.cpp  path_matrix_cost_search.cpp  path_matrix_cost_search.h  path_matrix_dijkstra_search.cpp  path_matrix_dijkstra_search.h  path_matrix_distance_search.cpp  path_matrix_distance_search.h  path_matrix_search_base.h  platform.cpp  traverse_line.h  vector_interface.h
modules/srrg/srrg2_executor/srrg2_executor_nogui/: CMakeLists.txt  package.xml
modules/srrg/srrg2_executor/srrg2_executor_nogui/src/apps/: srrg2_shell.cpp
modules/srrg/srrg2_solver/srrg2_solver/app/converter/: CMakeLists.txt  g2o_converter.cpp  g2o_converter_action_se2.h  g2o_converter_action_se3.cpp  g2o_converter_action_se3.h  solver_app_graph_converter.cpp
modules/srrg/srrg2_solver/srrg2_solver/app/graph_manipulators/: CMakeLists.txt  factor_noise_adder.h  solver_app_graph_evaluator.cpp  solver_app_graph_gt_generator.cpp  solver_app_graph_incremental_reader.cpp  solver_app_graph_initializer.cpp  solver_app_graph_sorter.cpp  solver_app_info_overwrite.cpp  solver_app_noise_adder.cpp
modules/srrg/srrg2_solver/srrg2_solver/app/optimizer/: CMakeLists.txt  solver_app_graph_optimizer.cpp  solver_app_incremental_optimizer.cpp
modules/srrg/srrg2_solver/srrg2_solver/app/plgo_simulator/: CMakeLists.txt  graph_generator.cpp  graph_generator.h  plgo_simulator.cpp  plgo_simulator.h  sim_record.cpp  sim_record.h  solver_app_plgo_simulator.cpp  trajectory_generator.cpp  trajectory_generator.h
modules/srrg/srrg2_solver/srrg2_solver/app/plgo_simulator2/: CMakeLists.txt  instances.cpp  instances.h  sim.conf  sim_robot.cpp  sim_robot.h  sim_sensor_3d_points_base.cpp  sim_sensor_3d_points_base.h  sim_sensor_3d_points_fov_limited.cpp  sim_sensor_3d_points_fov_limited.h  sim_sensor_3d_poses.cpp  sim_sensor_3d_poses.h  sim_sensor_base.h  sim_sensor_mode_3d_landmarks.cpp  sim_sensor_mode_3d_landmarks.h  sim_sensor_mode_3d_poses.cpp  sim_sensor_mode_3d_poses.h  sim_sensor_mode_base.cpp  sim_sensor_mode_base.h  sim_sensor_omnicam.cpp  sim_sensor_omnicam.h  sim_sensor_pinhole_camera.cpp  sim_sensor_pinhole_camera.h  sim_sensor_rectified_stereo.cpp  sim_sensor_rectified_stereo.h  sim_sensors.h  solver_app_plgo_simulator.cpp  trajectory_generator.cpp  trajectory_generator.h
modules/srrg/srrg2_solver/srrg2_solver/app/sfm/: CMakeLists.txt  essential2orientations.cpp  essential2orientations_constrained.cpp  essential2translations.cpp  essential_translation_factor.h  off_line_monocular_sfm_test.cpp  ovt.conf  plgo2sfm.cpp  script.sh  se3_epipolar_ba_factor_test.cpp  sfm2ba.cpp  sfm2eba.cpp  sfm2essential.cpp  sfm_common.cpp  sfm_common.h
modules/srrg/srrg2_solver/srrg2_solver/examples/: CMakeLists.txt  example_constrained_estimation.cpp  example_factor_graph_visit.cpp  example_kitti_imu_gps.cpp  example_se2_bearing_only_slam.cpp  example_se2_icp.cpp  example_se3_pgo.cpp  example_sparse_solver_block_inverse.cpp
modules/srrg/srrg2_solver/srrg2_solver/examples/data/: odometry_imu_data1.txt  odometry_imu_data2.txt
modules/srrg/srrg2_solver/srrg2_solver/src/srrg_solver/solver_core/: CMakeLists.txt  ad_constraint_factor.h  ad_constraint_factor_impl.cpp  ad_error_factor.h  ad_variable.h  constraint_factor.h  constraint_factor_impl.cpp  error_factor.h  error_factor_impl.cpp  factor.h  factor_base.cpp  factor_base.h  factor_correspondence_driven.h  factor_graph.cpp  factor_graph.h  factor_graph_interface.cpp  factor_graph_interface.h  factor_graph_view.cpp  instances.cpp  (+32 more)
src/mad_ba/: CMakeLists.txt  kdtree.hpp  point_cloud_proc.cpp  point_cloud_proc.h  point_cloud_proc_visual.cpp  surfel_matches.h  surfelv2.h  utils.cpp
src/structure_refinement/: CMakeLists.txt  data_association.cpp  data_association.cu  data_association.cuh  data_association.h  instances.cpp  instances.h  kd_utils.h  kdtree.cuh  kdtree.h  kdtree.hpp  point_cloud_proc.cpp  point_cloud_proc.h  point_cloud_proc_visual.cpp  surfel.cpp  surfel.h  surfel_matches.h  surfelv2.h  utils.cpp  utils.h
src/types/: CMakeLists.txt  instances.h  se3_pose_surfel_factor_ad.cpp  se3_pose_surfel_factor_ad.h  variable_surfel_ad.h
(+503 files in other folders)
