<?xml version="1.0"?>
<package format="2">
  <name>srrg2_executor_nogui</name>
  <version>0.9.0</version>
  <description>The srrg2_executor package (gui disabled version)</description>

  <maintainer email="grisetti@diag.uniroma1.it">Giorgio Grisetti</maintainer>
  <license>BSD-4</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>srrg_cmake_modules</depend>
  <depend>srrg2_core</depend>
  <depend>srrg2_core_ros</depend>

</package>
